2022-03-09  Jon Lee  <jonlee@apple.com>

        Unreviewed gardening.

        * platform/ios-wk2/TestExpectations:

2022-03-09  Youenn Fablet  <youenn@apple.com>

        WebRTC decoded frames are not correctly rotated in case GPU Process DOM rendering flag is set to true
        https://bugs.webkit.org/show_bug.cgi?id=237468
        <rdar://problem/89807876>

        Reviewed by Eric Carlson.

        * webrtc/video-rotation.html:
        Observe actual video frame rotation value.

2022-03-08  Antoine Quint  <graouts@webkit.org>

        [web-animations] font-family should support discrete animation
        https://bugs.webkit.org/show_bug.cgi?id=237591

        Reviewed by Myles Maxfield.

        * platform/gtk/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:
        * platform/ios/imported/w3c/web-platform-tests/css/css-fonts/animations/system-fonts-expected.txt:

2022-03-09  Antti Koivisto  <antti@apple.com>

        [CSS Container Queries] Import updated WPTs
        https://bugs.webkit.org/show_bug.cgi?id=237638

        Reviewed by Antoine Quint.

        * TestExpectations:

2022-03-09  Youenn Fablet  <youenn@apple.com>

        Scope capture sources by page identifiers
        https://bugs.webkit.org/show_bug.cgi?id=237359

        Reviewed by Eric Carlson.

        Remove platform/ios/mediastream/getUserMedia-single-capture.html now that we no longer handle multi capture in WebProcess but in GPUProcess.
        Update platform/ios/mediastream/audio-muted-in-background-tab-gpu-process.html to be like platform/ios/mediastream/audio-muted-in-background-tab.html
        so that test is no longer dependent on synchronous event firing.

        * platform/ios/mediastream/audio-muted-in-background-tab-gpu-process.html:
        * platform/ios/mediastream/getUserMedia-single-capture-expected.txt: Removed.
        * platform/ios/mediastream/getUserMedia-single-capture-gpu-process.html: